--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	  <title>Myrailsapp</title>
+	  <title>My rails application</title>
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
 		<%= render 'layouts/header' %>
-		
-		<%= yield %>
 
-		<%= render 'layouts/footer' %>
+		<div class="container">
+			<%= flash.each do |name, msg| %>
+				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+				<% end %>
+			<%= yield %>
+
+			<%= render 'layouts/footer' %>
+		</div>
+	
 	</body>
 </html>
